# ETAI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: api.py  aqi.py  config.py  enforcement.py  models.py  narration.py  pipeline.py
backend/adapters/: firms.py  geodata.py  openmeteo.py
backend/enrichment/: baseline.py  trajectory.py
backend/store/: db.py
data/geo/: README.md
frontend/: .env.example  package-lock.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: EnforcementPanel.jsx  Header.jsx  Legend.jsx  MapView.jsx  ProvenanceBadges.jsx  SidePanel.jsx  StackedBar.jsx
frontend/src/lib/: api.js  format.js  palette.js
scripts/: smoke_test.py  warm_narrations.py
vayulens/: .env.example  pyproject.toml
vayulens/backend/: api.py  models.py  pipeline.py
vayulens/backend/adapters/: base.py  firms.py  openaq.py  tropomi.py
vayulens/backend/attribution/: engine.py  fingerprints.py
vayulens/backend/enrichment/: features.py  trajectory.py
vayulens/backend/forecast/: baseline_model.py
vayulens/backend/store/: db.py
vayulens/frontend/: index.html  package.json  vite.config.js
vayulens/frontend/src/: App.jsx  styles.css
vayulens/scripts/: smoke_test.py
