[project]
name = "vayulens"
version = "0.1.0"
description = "AI-powered urban air-quality source attribution for Indian cities (Delhi vertical slice)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "shapely>=2.0",
    "geopandas>=1.0",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    "lightgbm>=4.3",
    # LLM narration providers (all optional at runtime; swappable via NARRATION_PROVIDER)
    "anthropic>=0.34",
    "google-genai>=1.0",
    "openai>=1.40",
]

[project.optional-dependencies]
# Sentinel-5P / TROPOMI via Google Earth Engine. Requires `earthengine authenticate`.
gee = ["earthengine-api>=1.0"]

[tool.uv]
# Virtual project: uv just manages the venv + deps; nothing to build/install.
package = false
